--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>clicker game</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
+    <script src="box.js" defer type="module"></script>
   </head>
   <body>
     <main class="container">
