modified:   box.js 	modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main class="container">
       <p class = "score">score = 0</p>
       <ul class="grid">
-        <li class="cell cell01"></li>
+        <!-- <li class="cell cell01"></li>
         <li class="cell cell02"></li>
         <li class="cell cell03"></li>
         <li class="cell cell04"></li>
@@ -39,7 +39,7 @@
         <li class="cell cell25"></li>
         <li class="cell cell26"></li>
         <li class="cell cell27"></li>
-        <li class="cell cell28"></li>
+        <li class="cell cell28"></li> -->
       </ul>
     </main>
   </body>
