--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>clicker game</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+      </style>
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Source+Code+Pro&display=swap');
+        </style>
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     <script src="script.js" defer type="module"></script>
     <script src="box.js" defer type="module"></script>
