new file:   images/paimon.gif 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>clicker game</title>
+    <title>speed clicking game</title>
+    <link rel="icon" href="images/paimon.gif">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
       </style>
-      <style>
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Source+Code+Pro&display=swap');
-        </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Source+Code+Pro&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     <script src="script.js" defer type="module"></script>
     <script src="box.js" defer type="module"></script>
   </head>
   <body>
     <main class="container">
-      <p class = "score">score = 0</p>
+      <h1 class = "heading">speed clicking game</h1>
+      <p class = "score">score: 0</p>
       <ul class="grid">
       </ul>
+      <h1 class = "level">LEVEL 1</h1>
     </main>
   </body>
 </html>
